--- a/joja-84+/JoJa84Plus.csproj
+++ b/joja-84+/JoJa84Plus.csproj
@@ -1,7 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<AssemblyName>JoJa84Plus</AssemblyName>
-		<Version>4.10.0</Version>
+		<Version>1.0.0</Version>
+		<LangVersion>8.0</LangVersion>
 		<RootNamespace>k4rakara.Stardew.JoJa84Plus</RootNamespace>
 		<TargetFramework>net452</TargetFramework>
 	</PropertyGroup>
